# XTU-ALTEST

./: CMakeLists.txt  main.cpp
Debug/: gene.txt
src/: bmp.hpp  test1.hpp  test2.hpp  test3.hpp
